# python-project-template

./: Makefile  setup.cfg  setup.py
python_project/: __main__.py
