[metadata]
name = "Python project"
version = attr: python_project.__version__
author = "Author name"
home-page = https://github.com/jcoelho93/python-project-template
description = A Python project template
long-description = file: README.md
long_description_content_type = text/markdown
platform = any
setup_requires =
    setuptools
install_requires =
    {install_requires}

[options]
include_package_data = true
python_requires = >=3.8*

[bdist_wheel]
python-tag = py3

[check]
metadata = true
restructuredtext = true

[sdist]
formats = gztar